# try_tests

./: Cargo.toml
test_accountid/: Cargo.toml
test_accountid/src/: main.rs  main2.rs
test_base58/: Cargo.toml
test_base58/src/: main.rs
test_scalecode/: Cargo.toml
test_scalecode/src/: m2.rs  m3.rs  m4.rs  main2.rs
test_signature/: Cargo.toml
test_signature/src/: m1.rs  m2.rs
test_subxt/: Cargo.toml
test_subxt/src/: main.rs
test_yamux/: Cargo.toml
