[package]
name = "test_scalecode"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
parity-scale-codec = { version = "3.6.12", features = ["derive"] }

[[bin]]
name = "m1"
path = "src/m1.rs"

[[bin]]
name = "m2"
path = "src/m2.rs"

[[bin]]
name = "m3"
path = "src/m3.rs"

[[bin]]
name = "m4"
path = "src/m4.rs"
